# fsearch

./: .gitignore  AGENTS.md  go
src/: fsearch_ipc.c  fsearch_ipc.h  fsearch_list_view.c  fsearch_list_view.h  fsearch_monitor_backend.c  fsearch_monitor_backend.h  fsearch_monitor_dirty_queue.c  fsearch_monitor_dirty_queue.h  fsearch_monitor_inotify.c  fsearch_monitor_inotify.h  fsearch_monitor_manager.c  fsearch_monitor_manager.h  fsearch_window.c  fsearchd.c  fsearchd.h  fsearchd_main.c  meson.build
